--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cssnano": "^7.1.0",
     "del": "^7.1.0",
     "gulp": "^4.0.2",
+    "gulp-cache": "^1.1.3",
     "gulp-clean-css": "^4.3.0",
     "gulp-ejs": "^5.1.0",
     "gulp-htmlmin": "^5.0.1",
