--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "js-confetti": "^0.12.0",
     "swiper": "^11.2.10",
     "typed.js": "^2.1.0"
   }
